--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -659,3 +659,8 @@ height: 37px;
         font-size: 16px;
     }
 }
+@media (max-width:400px){
+    .section05-map>p{
+        font-size: 17px;
+    }
+}
