--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -224,19 +224,23 @@ height: 37px;
 /* section02 end */
 
 #section03{
-    background: url(../img/bg-cha.jpg) no-repeat;
+    /* background: url(../img/bg-cha.jpg) no-repeat; */
     width: 100%;
     /* height: 1000px; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
-    padding-top: 680px;
+}
+#section03>img{
+    width: 100%;
 }
 .section03-warp{
     width: 100%;
     height: 300px;
     background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 680px;
 }
 .section03-txt{
     text-align: center;
