--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -51,13 +51,53 @@ height: 37px;
 .menu-box-button>ul>li{
     margin: 8% 0 0 65px;
 }
+.menu-box-button li a{
+    padding: 20px 25px;
+    display: block;
+}
 .menu-box-button>ul>li>a:hover{
     font-size: 23px;
     text-decoration: underline;
 }
+.menu-box-button ul:after{
+    content: "";
+    display: block;
+    clear: both;
+}
+.function-button6:hover{
+    background: #ccc;
+    border-radius: 5px;
+}
+@media (min-width:768px){
+    .function-button6{
+        display: none;
+    
+    }
+    .menu-box-button{
+        display: block !important;
+    }
+    .menu-box-button li{
+        float: left;
+        width: auto;
+    }
+}
 @media (max-width:767px){
-    .sec01-button{
-        display: none !important;
+    .function-button6{
+        width: 40px;
+        height: 40px;
+        margin: 11% 0 0;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+    .menu-box-button>ul{
+        display: none;
+    }
+    /* .function-button6{
+        display: block;
+    } */
+    .function-button6:focus{
+        outline: none;
     }
 }
 
@@ -224,13 +264,14 @@ height: 37px;
 /* section02 end */
 
 #section03{
-    /* background: url(../img/bg-cha.jpg) no-repeat; */
+    background: url(../img/bg-cha.jpg) no-repeat;
     width: 100%;
     /* height: 1000px; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
+    padding-top: 680px;
 }
 #section03>img{
     width: 100%;
@@ -239,8 +280,6 @@ height: 37px;
     width: 100%;
     height: 300px;
     background-color: rgba(0, 0, 0, 0.4);
-    position: absolute;
-    top: 680px;
 }
 .section03-txt{
     text-align: center;
@@ -284,7 +323,9 @@ height: 37px;
 .sec03-button>ul>li>button:hover{
     background-color: gray;
 }
-
+.sec03-button>ul>li>button:focus{
+    outline: none;
+}
 @media(max-width:767px){
     #section03{
         padding-top: 740px;
@@ -309,8 +350,8 @@ height: 37px;
         margin-top: 20px;
     }
     .sec03-button>ul>li>button{
-        width: 10px;
-        height: 10px;
+        width: 15px;
+        height: 15px;
     }
 }
 @media (max-width:535px){
