--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -108,7 +108,7 @@ height: 37px;
     font-size: 50px;
     color: #fff;
     font-family: 'GyeonggiBatang';
-    border: 10px solid #ccc;
+    border: 10px solid #93b1d3;
     border-image: linear-gradient(to right bottom, #93b1d3 0%, rgb(104,110,76,0) 100%);
     border-image-slice: 1;
     display:flex;
