--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -129,7 +129,7 @@ height: 37px;
 /* section01  end*/
 
 #section02{
-    background: url(../img/bg-color-green.jpg) no-repeat;
+    background: url('../img/bg-color-pink.jpg');
     width: 100%;
     /* height: 1000px; */
     background-repeat: no-repeat;
@@ -197,7 +197,7 @@ height: 37px;
         padding-top: 15%;
     }
     .sec02-txt>h2{
-        font-size: 40px;
+        font-size: 38px;
         line-height: 50px;
     }
     .sec02-txt>p{
@@ -244,23 +244,29 @@ height: 37px;
 /* section02 end */
 #section03{
     width: 100%;
-    height: 910px;
+    /* height: 910px; */
+    background: url('../img/bg-color-pink.jpg');
+}
+.sec03-main{
+    margin-left: 10%;
+    margin-bottom: 5%;
+    padding-top: 10%;
+}
+.sec03-main>h1{
+    font-size: 63px;
+    line-height: 70px;
+    font-family: 'GyeonggiBatang';
 }
 .section-img{
     display: flex;
     width: 90%;
     margin: 0 auto;
-    height: auto;
 }
 .section-img-bg1{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
-    margin: 100px 25px 50px 0;
-}
-.bg1{
-    display: block;
 }
 .section-img-txt{
     position:absolute;
@@ -278,51 +284,115 @@ height: 37px;
     top: 0;
     height: 100%;
 }
-.bg2{
-    display: block;
-}
 .section-img-bg2{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
-    margin: 100px 0 50px 25px;
 }
 .section-img-bg2:hover .section-img-txt{
     top: 0;
     height: 100%;
-}
-.bg3{
-    display: block;
 }
 .section-img-bg3{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
-    margin: 50px 25px 100px 0;
+    margin-bottom: 3%;
 }
 .section-img-bg3:hover .section-img-txt{
     top: 0;
     height: 100%;
-}
-.bg4{
-    display: block;
 }
 .section-img-bg4{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
-    margin: 50px 0 100px 25px;
+    margin-bottom: 3%;
 }
 .section-img-bg4:hover .section-img-txt{
     top: 0;
     height: 100%;
 }
+.section03-txt{
+    text-align: center;
+}
+.section03-txt h1{
+    font-size: 45px;
+    color: #fff;
+    font-family: 'GyeonggiTitleM';
+    margin-top: 12%;
+}
+.section03-txt p{
+    font-size: 22px;
+    color: #fff;
+    font-family: 'GyeonggiBatang';
+    line-height: 20px;
+    letter-spacing: 2px;
+}
+.section03-txt p:nth-child(2){
+    margin-top: 5%;
+}
+
+@media(max-width:768px){
+    .sec03-main h1{
+        font-size: 45px;
+        line-height: 50px;
+    }
+    .section-img{
+        flex-wrap: wrap;
+    }
+    .section03-txt h1{
+        font-size: 42px;
+        margin-top: 13%;
+    }
+    .section03-txt p{
+        font-size: 20px;
+        line-height: 15px;
+    }
+}
+@media(max-width:535px){
+    .sec03-main h1{
+        font-size: 40px;
+        line-height: 45px;
+    }
+    .section03-txt h1{
+        font-size: 37px;
+        margin-top: 8%;
+    }
+    .section03-txt p{
+        font-size: 18px;
+        line-height: 12px;
+    }
+}
+@media(max-width:375px){
+    .sec03-main h1{
+        font-size: 38px;
+        line-height: 45px;
+    }
+    .section03-txt h1{
+        font-size: 34px;
+        margin-top: 5%;
+    }
+    .section03-txt p{
+        font-size: 16px;
+        line-height: 9px;
+    }
+}
 /* section03 end */
+
+
+
 #section04{
     width: 100%;
+    background: url('../img/bg-color-pink.jpg');
+}
+.sec04-width{
+    width: 80%;
+    margin: 0 auto;
+    padding: 10% 0;
 }
 .section04-btn{
     width: 100%;
@@ -349,9 +419,9 @@ height: 37px;
     width: 100%;
 }
 .pro-content{
-    background: url('../img/bg-color-blue.jpg');
+    /* background: url('../img/bg-color-blue.jpg'); */
     width: 50%;
-    height: 910px;  
+    height: 800px;  
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -393,9 +463,9 @@ height: 37px;
     width: 100%;
 }
 .bake-content{
-    background: url('../img/bg-orange.jpg');
+    /* background: url('../img/bg-orange.jpg'); */
     width: 50%;
-    height: 910px;    
+    height: 800px;    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
