--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -7,11 +7,17 @@
     .nanumsquare {
         font-family: 'NanumSquare', sans-serif !important;
     }    
-/* .fixed{
-	background:rgba(0,0,0,0.3); transition:all 0.5s ease-in-out; -webkit-transition:all 0.5s ease-in-out;} */
+.fixed{
+    background:rgba(0,0,0,0.3); 
+    transition:all 0.5s ease-in-out; 
+    -webkit-transition:all 0.5s ease-in-out;
+}
+.fixed>div>ul>li>a{
+    color: #fff;
+}
 
 .menu_box{
-    background: url('../img/bg-color-pink.jpg');
+    /* background: url('../img/bg-color-pink.jpg'); */
     width:100%; 
     height:80px; 
     color:#2a2a2a; 
@@ -97,7 +103,7 @@ height: 37px;
     background-position: center;
 }
 .main-title{
-    background: rgba(0,0,0,0.3);
+    /* background: rgba(0,0,0,0.3); */
     width: 100%;
     height: 1000px;
     display:flex;
@@ -108,11 +114,13 @@ height: 37px;
     width: 270px;
     height: 150px;
     font-size: 50px;
-    color: #fff;
+    color: #000;
     font-family: 'GyeonggiBatang';
-    border: 10px solid #fff;
+    background: #fff;
+    background: linear-gradient(to right, #fff 0%, rgb(104,110,76,0)100%);
+    /* border: 10px solid #fff;
     border-image: linear-gradient(to left, #fff 0%, rgb(104,110,76,0) 100%);
-    border-image-slice: 1;
+    border-image-slice: 1; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -250,7 +258,7 @@ height: 37px;
 #section03{
     width: 100%;
     /* height: 910px; */
-    background: url('../img/bg-color-pink.jpg');
+    /* background: url('../img/bg-color-pink.jpg'); */
 }
 .sec03-main{
     margin-left: 10%;
@@ -397,277 +405,93 @@ height: 37px;
 .sec04-main{
     width: 30%;
     text-align: right;
+    padding-top: 10%;
+    padding-left: 55%;
 }
 .sec04-main h1{
     font-size: 50px;
     line-height: 55px;
     font-family: 'GyeonggiBatang';
 }
-.sec04-width{
-    width: 80%;
+.sec04-content{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    margin-top: 10%;
+}
+.sec04-pro{
+    background: url('../img/provence-vill.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 50%;
+}
+.sec04-bake{
+    background: url('../img/ru-bake2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 50%;
+}
+.pro-back{
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 500px;
+    position: absolute;
+}
+.bake-back{
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 500px;
+    position: absolute;
+}
+.sec04-txt{
+    color: #fff;
+    text-align: center;
+}
+.sec04-txt-t{
+    display: flex;
+}
+.sec04-txt-t h1{
+    font-size: 48px;
+    margin-left: 5%;
+    margin-top: 7%;
+    font-family: 'GyeonggiTitleM';
+}
+.sec04-txt h3{
+    font-family: 'GyeonggiBatang';
+    font-size: 28px;
+    margin-top: 13%;
+}
+.sec04-txt p{
+    font-family: 'GyeonggiBatang';
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 2px;
+    margin-top: 3%;
+}
+.ru .bar{
+    width: 40%;
+}
+.bar{
+    width: 60%;
+    color: #fff;
+    border-bottom: 5px solid #fff;
     margin: 0 auto;
 }
-.section04-btn{
-    width: 100%;
-    display: flex;
-}
-.section04-btn>button{
-    width: 50%;
-    font-size: 30px;
-    outline: none;
-    cursor: pointer;
-    font-family: 'GyeonggiTitleM';
-    color: #121212;
-    border: none;
-}
-.pro{
-    background: url('../img/bg-color-pink.jpg');
-}
-.bake{
-    background: url('../img/bg-color-pink.jpg');
-}
-.section04-pro{
-    display: flex;
-    width: 100%;
-}
-.pro-content{
-    width: 50%;
-    height: 800px;  
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.pro-pic{
-    background: url('../img/provence.jpg');
-    width: 50%;
-    /* height: 1000px; */   
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.pro-txt>h1{
-    font-size: 48px;
-    color: #022e70;
-    font-family: 'MapoMaponaru';
-    letter-spacing: 7px
-}
-.pro-txt>h3{
-    font-size: 25px;
-    letter-spacing: 2px;
-    font-family: 'GyeonggiBatang';
-    margin: 50px 0 30px;
-    font-weight: bold;
-}
-.pro-txt>p{
-    font-size: 22px;
-    letter-spacing: 2px;
-    line-height: 35px;
-    font-family: 'GyeonggiBatang';
-}
-.section04-bake{
-    display: flex;
-    display: none;
-    width: 100%;
-}
-.bake-content{
-    width: 50%;
-    height: 800px;    
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.bake-pic{
-    background: url('../img/ru-bake.jpg');
-    width: 50%;
-    /* height: 1000px; */
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-.bake-txt>h1{
-    font-size: 48px;
-    color: #704502;
-    font-family: 'MapoMaponaru';
-    letter-spacing: 7px;
-}
-.bake-txt>h3{
-    font-size: 25px;
-    letter-spacing: 2px;
-    font-family: 'GyeonggiBatang';
-    margin: 50px 0 30px;
-    font-weight: bold;
-}
-.bake-txt>p{
-    font-size: 22px;
-    letter-spacing: 2px;
-    line-height: 35px;
-    font-family: 'GyeonggiBatang';
-}
-
-@media (max-width:768px){
-    .section04-pro{
-        flex-direction: column-reverse;
+@media(max-width:768px){
+    .sec04-content{
+        flex-direction: column;
     }
-    .pro-content{
+    .sec04-pro{
         width: 100%;
-        height: 400px;
     }
-    .pro-pic{
+    .sec04-bake{
         width: 100%;
-        height: 550px;
-        background-position: bottom;
-    }
-    .pro-txt>h1{
-        font-size: 40px;
-        letter-spacing: 2px;
-    }
-    .pro-txt>h3{
-        font-size: 25px;
-        letter-spacing: 1px;
-        margin: 2.5% 0;
-    }
-    .pro-txt>p{
-        font-size: 22px;
-        line-height: 25px;
-        letter-spacing: 3px;  
-    }
-    .section04-bake{
-        flex-direction: column-reverse; 
-    }
-    .bake-content{
-        width: 100%;
-        height: 400px;
-    }
-    .bake-pic{
-        width: 100%;
-        height: 550px;
-        background-position: center;
-    }
-    .bake-txt>h1{
-        font-size: 40px;
-        letter-spacing: 2px;
-    }
-    .bake-txt>h3{
-        font-size: 25px;
-        letter-spacing: 1px;
-        margin: 2.5% 0;
-    }
-    .bake-txt>p{
-        font-size: 22px;
-        line-height: 25px;
-        letter-spacing: 2px;
     }
 }
-@media (max-width:535px){
-    .pro-content{
-        width: 100%;
-        height: 350px;
-    }
-    .pro-pic{
-        width: 100%;
-        height: 500px;
-        background-position: bottom;
-    }
-    .pro-txt>h1{
-        font-size: 33px;
-        letter-spacing: 2px;
-    }
-    .pro-txt>h3{
-        font-size: 20px;
-        letter-spacing: 1px;
-        margin: 2% 0;
-    }
-    .pro-txt>p{
-        font-size: 18px;
-        line-height: 20px;
-        letter-spacing: 2px;  
-    }
-    .bake-content{
-        width: 100%;
-        height: 350px;
-    }
-    .bake-pic{
-        width: 100%;
-        height: 500px;
-        background-position: center;
-    }
-    .bake-txt>h1{
-        font-size: 33px;
-        letter-spacing: 2px;
-    }
-    .bake-txt>h3{
-        font-size: 20px;
-        letter-spacing: 1px;
-        margin: 2% 0;
-    }
-    .bake-txt>p{
-        font-size: 18px;
-        line-height: 20px;
-        letter-spacing: 2px;
-    }
-    .section04-btn>button{
-        font-size: 25px;
-    }
-}
-@media (max-width:375px){
-    .pro-content{
-        width: 100%;
-        height: 300px;
-    }
-    .pro-pic{
-        width: 100%;
-        height: 450px;
-        background-position: bottom;
-    }
-    .pro-txt>h1{
-        font-size: 33px;
-        letter-spacing: none;
-    }
-    .pro-txt>h3{
-        font-size: 18px;
-        letter-spacing: 1px;
-        margin: 1.5% 0;
-    }
-    .pro-txt>p{
-        font-size: 16px;
-        line-height: 20px;
-        letter-spacing: none;  
-    }
-    .bake-content{
-        width: 100%;
-        height: 300px;
-    }
-    .bake-pic{
-        width: 100%;
-        height: 450px;
-        background-position: center;
-    }
-    .bake-txt>h1{
-        font-size: 33px;
-        letter-spacing: none;
-    }
-    .bake-txt>h3{
-        font-size: 18px;
-        letter-spacing: 1px;
-        margin: 1.5% 0;
-    }
-    .bake-txt>p{
-        font-size: 16px;
-        line-height: 20px;
-        letter-spacing: none;
-    }
-    .section04-btn>button{
-        font-size: 22px;
-    }
-}
-
 /* section04 end */
 
 #section05{
