--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -142,7 +142,11 @@ height: 37px;
         text-align: center;
     }
 }
-
+@media (max-width:375px){
+    #section01{
+        background-position: center !important;
+    }
+}
 
 /* section01  end*/
 
@@ -447,7 +451,7 @@ height: 37px;
     position: relative;
 }
 .sec04-txt{
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
     color: #fff;
 }
 .sec04-bar{
@@ -589,9 +593,10 @@ height: 37px;
 }
 .section05-map{
     width: 50%;
+    margin-bottom: 5%;
 }
 #map{
-    margin: 5% 0 5%;
+    margin: 0 auto;
 }
 .section05-map>h1{
     color: #fff;
@@ -599,95 +604,42 @@ height: 37px;
     font-family: 'GyeonggiTitleM';
     letter-spacing: 3px;
     margin-top: 20%;
-}
-.section05-map>p{
-    color: #fff;
-    font-size: 25px;
-    font-family: 'GyeonggiBatang';
-    letter-spacing: 3px;
-    margin-bottom: 20%;
-    font-weight: bold;
+    margin-bottom: 5%;
 }
 .section05-tra{
-    background: #dee2d1;
+    background: #e3e3e3;
     height: 600px;
-    width: 50%;
+    width: 45%;
     margin-top: 21.5%;
+    text-align: right;
+    padding: 0 2.5%;
 }
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #dee2d1;
-    background-color: #fff;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #dee2d1;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    background: #dee2d1;
-    width: 95.5%;
-    display: none;
-    padding: 6px 12px;
-    padding-bottom: 20.5%;
-  }
-  .tabcontent h2{
-    font-size: 30px;
-    font-family: 'GyeonggiTitleM';
+.section05-tra p:last-child{
+    color: #121212;
+    font-size: 25px;
+    font-family: 'GyeonggiBatang';
+    font-weight: bold;
+    letter-spacing: 3px;
     margin-top: 10%;
+    text-align: center;
+}
+.section05-tra h2{
+    color: #121212;
+    font-size: 30px;
+    font-family: 'GyeonggiBatang';
+    font-weight: bold;
+    margin-top: 5%;
     margin-bottom: 5%;
     letter-spacing: 3px;
-  }
-  .tabcontent p{
-    font-size: 20px;
+}
+.section05-tra>p{
+    color: #121212;
+    font-size: 22px;
     font-family: 'GyeonggiBatang';
     letter-spacing: 2px;
     line-height: 35px;
-  }
-  #London{
-      display: block;
-  }
-  #London p:nth-child(3){
-      padding-top: 10%;
-      font-size: 25px;
-      font-family: 'GyeonggiBatang';
-      font-weight: bold;
-      letter-spacing: 3px;
-  }
-  #London p:last-child{
-    padding-top: 2%;
-  }
-  
-  /* Fade in tabs */
-  @-webkit-keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
-  
-  @keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
-  }
+}
+
 .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
 .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
 .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #d95050;background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
@@ -723,21 +675,25 @@ height: 37px;
     }
     .section05-tra{
         width: 90%;
-        text-align: left;
+        height: 500px;
         margin: 0 auto;
-        padding-bottom: 10%;
+        margin-bottom: 3%;
     }
-    .section05-tra>h2{
-        margin: 1% 0 1%;
+    .section05-tra h2{
         font-size: 25px;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        line-height: 30px;
     }
-    .section05-tra>p{
-        font-size: 18px;
-        line-height: 25px;
-        margin-top: 2%;
+    .section05-tra p{
+        font-size: 20px;
+    }
+    .section05-tra p:last-child{
+        font-size: 22px;
+        margin-top: 5%;
     }
 }
-@media (max-width:535px){
+@media (max-width:536px){
     .section05-map>h1{
         font-size: 35px;
     }
@@ -749,18 +705,40 @@ height: 37px;
         margin-bottom: 7%;
     }
     .section05-tra{
-        padding-bottom: 5%;
+        width: 90%;
+        height: 400px;
+        margin: 0 auto;
+        margin-bottom: 5%;
     }
-    .section05-tra>h2{
+    .section05-tra h2{
         font-size: 22px;
-        margin: 0;
+        margin-top: 3%;
+        margin-bottom: 0;
     }
-    .section05-tra>p{
-        font-size: 16px;
+    .section05-tra p{
+        font-size: 18px;
+        line-height: 25px;
+    }
+    .section05-tra p:last-child{
+        font-size: 20px;
+        margin-top: 5%;
     }
 }
-@media (max-width:400px){
+@media (max-width:376px){
     .section05-map>p{
         font-size: 17px;
+    }
+    .section05-tra h2{
+        font-size: 20px;
+        margin-top: 3%;
+        margin-bottom: 0;
+    }
+    .section05-tra p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .section05-tra p:last-child{
+        font-size: 18px;
+        margin-top: 5%;
     }
 }
